--- a/frontend/src/assets/sass/components/header/header.scss
+++ b/frontend/src/assets/sass/components/header/header.scss
@@ -11,6 +11,10 @@
     background-color: $white;
     height: 75px;
     border-bottom: 2px solid $gray;
+    position: fixed;
+    z-index: 1000;
+     width: -webkit-fill-available;
+
   
     .header-items {
       display: flex;
