Phase 3 :  created common card slider

--- a/frontend/src/assets/sass/components/index.scss
+++ b/frontend/src/assets/sass/components/index.scss
@@ -1,3 +1,4 @@
 @import './header/header.scss';
 @import './card/cardItem.scss';
 @import './header/subNavBar.scss';
+@import './common/index.scss';
