--- a/frontend/src/assets/sass/index.scss
+++ b/frontend/src/assets/sass/index.scss
@@ -1,3 +1,3 @@
 @import './common/index.scss';
-@import './containers/pages/index.scss';
+@import './containers/landingPage/index.scss';
 @import './components/index.scss';
