Phase 4 : created dynamic card List component

--- a/frontend/src/assets/sass/components/index.scss
+++ b/frontend/src/assets/sass/components/index.scss
@@ -2,3 +2,4 @@
 @import './card/cardItem.scss';
 @import './header/subNavBar.scss';
 @import './common/index.scss';
+@import './card/foodListComponent.scss';
