Phase 5: create Empty card  compoent

--- a/frontend/src/assets/sass/components/index.scss
+++ b/frontend/src/assets/sass/components/index.scss
@@ -1,5 +1,6 @@
 @import './header/header.scss';
 @import './card/cardItem.scss';
+@import './card/emptyCard.scss';
 @import './header/subNavBar.scss';
 @import './common/index.scss';
 @import './card/foodListComponent.scss';
