Phase 6: created Login and sign up screen

--- a/frontend/src/assets/sass/components/card/foodListComponent.scss
+++ b/frontend/src/assets/sass/components/card/foodListComponent.scss
@@ -9,6 +9,9 @@
     width: calc(50% - 5px);
   }
   
+  .food-title{
+    font-weight: bold !important;
+  }
   .foodItemCard {
     margin-bottom: 10px;
     width: 200px;
