--- a/frontend/src/assets/sass/components/index.scss
+++ b/frontend/src/assets/sass/components/index.scss
@@ -4,3 +4,4 @@
 @import './header/subNavBar.scss';
 @import './common/index.scss';
 @import './card/foodListComponent.scss';
+@import './login/login.scss';
