Style menu card

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,8 @@
 *{
 margin: 0;
 padding: 0;
+.body{
+    font-family: plex-sans, "Helvetica Neue", Helvetica, Arial, "Microsoft YaHei", 微软雅黑体, "Hiragino Sans GB", 冬青黑体, sans-serif !important;
+   
+}
 }
