--- a/frontend/src/assets/sass/components/common/foodItem/foodItemComponent.scss
+++ b/frontend/src/assets/sass/components/common/foodItem/foodItemComponent.scss
@@ -1,8 +1,8 @@
 .foodItemComponent {
     display: flex;
     align-items: center;
-    margin-left: 10px;
-    margin-top: 40px;
+    margin-left: 51px;
+    margin-top: 8px;
   }
   
   .foodItemCard {
@@ -45,3 +45,7 @@
   }
   
 
+.foodList-card{
+  width: 425px;
+  height: 128px;
+}
