--- a/frontend/src/assets/sass/containers/landingPage/index.scss
+++ b/frontend/src/assets/sass/containers/landingPage/index.scss
@@ -17,9 +17,11 @@
 }
 .landing-section2-des2 {
     font-weight: bold !important;
+    margin-top: 20px !important;
+    margin-bottom: 5px !important;
 }
 
 .landing-section2 {
-    margin-left: 30px;
-    margin-top: 20px;
+    margin-left: 61px;
+    margin-top: 20px
 }
