--- a/frontend/src/assets/sass/containers/login/loginContainer.scss
+++ b/frontend/src/assets/sass/containers/login/loginContainer.scss
@@ -1,5 +1,9 @@
 .login-container{
-    position: absolute;
-    margin-top: 22%;
-    width: -webkit-fill-available;
+    display: flex;
+  
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+   
+
 }
