handle scroller in navigation

--- a/frontend/src/assets/sass/components/header/subNavBar.scss
+++ b/frontend/src/assets/sass/components/header/subNavBar.scss
@@ -62,9 +62,9 @@
       }
     }
   
-    #first-item {
-      @include common-nav-bar-theme;
-    }
+    // #first-item {
+    //   @include common-nav-bar-theme;
+    // }
 
     
   }
