--- a/frontend/src/assets/sass/containers/landingPage/index.scss
+++ b/frontend/src/assets/sass/containers/landingPage/index.scss
@@ -20,8 +20,24 @@
     margin-top: 20px !important;
     margin-bottom: 5px !important;
 }
+.landing-section2-des3 {
+    font-weight: bold !important;
+    margin-top: 20px !important;
+    margin-bottom: 5px !important;
+    margin-left: 42px !important;
+}
 
 .landing-section2 {
     margin-left: 61px;
     margin-top: 20px
+}
+
+.isloading-icon{
+
+   
+    margin-top: 16px;
+    margin-bottom:16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
